--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+        gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
+
+    }
+    dependencies {
+        def nav_version = '2.4.1'
+
+        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+
+    }
+
+}
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
