--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.devtools.ksp").version("1.6.10-1.0.4") // Or latest version of KSP
+    id("com.google.devtools.ksp").version("1.7.0-1.0.6") // Or latest version of KSP
 
 }
 
@@ -43,6 +43,7 @@ dependencies {
     def koin_version = "3.2.0"
     def retrofit_version = "2.9.0"
     def okHttp = "4.9.3"
+    def moshi_version = "1.13.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -72,6 +73,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     // Moshi
-    implementation "com.squareup.moshi:moshi:1.13.0"
-    ksp("com.squareup.moshi:moshi-kotlin-codegen:1.13.0")
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    ksp("com.squareup.moshi:moshi-kotlin-codegen:$moshi_version")
 }
