--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,25 +7,31 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".application.ChuckNorrisApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:name=".ChuckNorrisApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.ChuckNorrisApp"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.home.MainActivity"
-            android:exported="true">
+
+        <activity-alias
+            android:name=".EntryPoint"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:targetActivity=".application.ui.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity-alias>
+
+        <activity
+            android:name="com.mondialrelay.chucknorrisapp.application.ui.home.MainActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
