--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,42 +37,45 @@ android {
 }
 
 dependencies {
-    def coroutines_core = "1.5.0"
-    def coroutines_android = "1.3.5"
-    def nav_version = "2.5.0"
-    def koin_version = "3.2.0"
-    def retrofit_version = "2.9.0"
-    def okHttp = "4.9.3"
-    def moshi_version = "1.13.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Kotlin Coroutines
+    def coroutines_core = "1.5.0"
+    def coroutines_android = "1.3.5"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_core"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android"
 
     // Navigation
+    def nav_version = "2.5.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Koin
+    def koin_version = "3.2.0"
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
 
     // Retrofit
+    def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp"
-    implementation("com.squareup.okhttp3:okhttp:$okHttp")
     implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    def okHttp = "4.9.3"
+    implementation("com.squareup.okhttp3:okhttp:$okHttp")
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp"
 
     // Moshi
+    def moshi_version = "1.13.0"
     implementation "com.squareup.moshi:moshi:$moshi_version"
     ksp("com.squareup.moshi:moshi-kotlin-codegen:$moshi_version")
+
 }
