--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshi_version"
     ksp("com.squareup.moshi:moshi-kotlin-codegen:$moshi_version")
 
+    // Material Design
+    def material_version = "1.6.1"
+    implementation "com.google.android.material:material:$material_version"
+
 }
