--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.devtools.ksp").version("1.7.0-1.0.6") // Or latest version of KSP
+    id("com.google.devtools.ksp").version("1.7.20-1.0.7") // Or latest version of KSP
 
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.mondialrelay.chucknorrisapp"
@@ -32,14 +32,24 @@ android {
         jvmTarget = '11'
     }
     buildFeatures {
+        compose true
         viewBinding true
+
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.3.2"
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
@@ -50,6 +60,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.compose.ui:ui:1.2.1"
+    implementation "androidx.compose.material:material:1.2.1"
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.2.1'
+
 
     // Kotlin Coroutines
     def coroutines_core = "1.5.0"
@@ -66,6 +85,7 @@ dependencies {
     def koin_version = "3.2.0"
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     // Retrofit
     def retrofit_version = "2.9.0"
